Mobile fixes
So the coming soon doesn't get cropped

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body {
   margin: 0;
   overflow: hidden;
   background: black;
+  padding: 1rem;
 }
 #wrapper {
   border: 2px solid red;
@@ -24,11 +25,12 @@ body {
   position: relative;
   top: 0;
   left: 0;
-  z-index: -1;
+  z-index: 100;
+  pointer-events: none;
   align-self: center;
   justify-self: center;
-  top: 0;
-  left: 0;
+  max-width: 95vw;
+  max-height: 95vw;
   animation: rotate 100s linear infinite;
 }
 
